--- a/app/src/main/res/layout/layout_recycler.xml
+++ b/app/src/main/res/layout/layout_recycler.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/noRecordsLayout"
         layout="@layout/layout_norecords"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
